docs-archive/apache-airflow-providers-dbt-cloud/4.8.0/_sources/_api/airflow/providers/dbt/cloud/operators/dbt/index.rst.txt
airflow.providers.dbt.cloud.operators.dbt
=========================================

.. py:module:: airflow.providers.dbt.cloud.operators.dbt


Classes
-------

.. autoapisummary::

   airflow.providers.dbt.cloud.operators.dbt.DbtCloudRunJobOperatorLink
   airflow.providers.dbt.cloud.operators.dbt.DbtCloudRunJobOperator
   airflow.providers.dbt.cloud.operators.dbt.DbtCloudGetJobRunArtifactOperator
   airflow.providers.dbt.cloud.operators.dbt.DbtCloudListJobsOperator


Module Contents
---------------

.. py:class:: DbtCloudRunJobOperatorLink

   Bases: :py:obj:`airflow.providers.common.compat.sdk.BaseOperatorLink`


   Allows users to monitor the triggered job run directly in dbt Cloud.


   .. py:attribute:: name
      :value: 'Monitor Job Run'


      Name of the link. This will be the button name on the task UI.



   .. py:method:: get_link(operator, *, ti_key=None)

      Link to external system.

      :param operator: The Airflow operator object this link is associated to.
      :param ti_key: TaskInstance ID to return link for.
      :return: link to external system



.. py:class:: DbtCloudRunJobOperator(*, dbt_cloud_conn_id = DbtCloudHook.default_conn_name, job_id = None, project_name = None, environment_name = None, job_name = None, account_id = None, trigger_reason = None, steps_override = None, schema_override = None, wait_for_termination = True, timeout = 60 * 60 * 24 * 7, check_interval = 60, additional_run_config = None, reuse_existing_run = False, retry_from_failure = False, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), hook_params = None, **kwargs)

   Bases: :py:obj:`airflow.providers.common.compat.sdk.BaseOperator`


   Executes a dbt Cloud job.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:DbtCloudRunJobOperator`

   :param dbt_cloud_conn_id: The connection ID for connecting to dbt Cloud.
   :param job_id: The ID of a dbt Cloud job. Required if project_name, environment_name, and job_name are not provided.
   :param project_name: Optional. The name of a dbt Cloud project. Used only if ``job_id`` is None.
   :param environment_name: Optional. The name of a dbt Cloud environment. Used only if ``job_id`` is None.
   :param job_name: Optional. The name of a dbt Cloud job. Used only if ``job_id`` is None.
   :param account_id: Optional. The ID of a dbt Cloud account.
   :param trigger_reason: Optional. Description of the reason to trigger the job.
       Defaults to "Triggered via Apache Airflow by task <task_id> in the <dag_id> DAG."
   :param steps_override: Optional. List of dbt commands to execute when triggering the job instead of those
       configured in dbt Cloud.
   :param schema_override: Optional. Override the destination schema in the configured target for this job.
   :param wait_for_termination: Flag to wait on a job run's termination.  By default, this feature is
       enabled but could be disabled to perform an asynchronous wait for a long-running job run execution
       using the ``DbtCloudJobRunSensor``.
   :param timeout: Time in seconds to wait for a job run to reach a terminal status for non-asynchronous
       waits. Used only if ``wait_for_termination`` is True. This limits how long the operator waits for the
       job to complete and does not imply job cancellation. Task-level timeouts should be
       enforced via ``execution_timeout``. Defaults to 7 days.
   :param check_interval: Time in seconds to check on a job run's status for non-asynchronous waits.
       Used only if ``wait_for_termination`` is True. Defaults to 60 seconds.
   :param additional_run_config: Optional. Any additional parameters that should be included in the API
       request when triggering the job.
   :param reuse_existing_run: Flag to determine whether to reuse existing non terminal job run. If set to
       true and non terminal job runs found, it use the latest run without triggering a new job run.
   :param retry_from_failure: Flag to determine whether to retry the job run from failure. If set to true
       and the last job run has failed, it triggers a new job run with the same configuration as the failed
       run. For more information on retry logic, see:
       https://docs.getdbt.com/dbt-cloud/api-v2#/operations/Retry%20Failed%20Job
   :param deferrable: Run operator in the deferrable mode
   :param hook_params: Extra arguments passed to the DbtCloudHook constructor.
   :param execution_timeout: Maximum time allowed for the task to run. If exceeded, the dbt Cloud
       job will be cancelled and the task will fail. When both ``execution_timeout`` and
       ``timeout`` are set, the earlier deadline takes precedence.
   :return: The ID of the triggered dbt Cloud job run.


   .. py:attribute:: template_fields
      :value: ('dbt_cloud_conn_id', 'job_id', 'project_name', 'environment_name', 'job_name', 'account_id',...



   .. py:attribute:: operator_extra_links


   .. py:attribute:: dbt_cloud_conn_id
      :value: 'dbt_cloud_default'



   .. py:attribute:: account_id
      :value: None



   .. py:attribute:: job_id
      :value: None



   .. py:attribute:: project_name
      :value: None



   .. py:attribute:: environment_name
      :value: None



   .. py:attribute:: job_name
      :value: None



   .. py:attribute:: trigger_reason
      :value: None



   .. py:attribute:: steps_override
      :value: None



   .. py:attribute:: schema_override
      :value: None



   .. py:attribute:: wait_for_termination
      :value: True



   .. py:attribute:: timeout
      :value: 604800



   .. py:attribute:: check_interval
      :value: 60



   .. py:attribute:: additional_run_config


   .. py:attribute:: run_id
      :type:  int | None
      :value: None



   .. py:attribute:: reuse_existing_run
      :value: False



   .. py:attribute:: retry_from_failure
      :value: False



   .. py:attribute:: deferrable


   .. py:attribute:: hook_params


   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: execute_complete(context, event)

      Execute when the trigger fires - returns immediately.



   .. py:method:: on_kill()

      Override this method to clean up subprocesses when a task instance gets killed.

      Any use of the threading, subprocess or multiprocessing module within an
      operator needs to be cleaned up, or it will leave ghost processes behind.



   .. py:property:: hook

      Returns DBT Cloud hook.



   .. py:method:: get_openlineage_facets_on_complete(task_instance)

      Implement _on_complete because job_run needs to be triggered first in execute method.

      This should send additional events only if operator `wait_for_termination` is set to True.



.. py:class:: DbtCloudGetJobRunArtifactOperator(*, dbt_cloud_conn_id = DbtCloudHook.default_conn_name, run_id, path, account_id = None, step = None, output_file_name = None, hook_params = None, **kwargs)

   Bases: :py:obj:`airflow.providers.common.compat.sdk.BaseOperator`


   Download artifacts from a dbt Cloud job run.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:DbtCloudGetJobRunArtifactOperator`

   :param dbt_cloud_conn_id: The connection ID for connecting to dbt Cloud.
   :param run_id: The ID of a dbt Cloud job run.
   :param path: The file path related to the artifact file. Paths are rooted at the target/ directory.
       Use "manifest.json", "catalog.json", or "run_results.json" to download dbt-generated artifacts
       for the run.
   :param account_id: Optional. The ID of a dbt Cloud account.
   :param step: Optional. The index of the Step in the Run to query for artifacts. The first step in the
       run has the index 1. If the step parameter is omitted, artifacts for the last step in the run will
       be returned.
   :param output_file_name: Optional. The desired file name for the download artifact file.
       Defaults to <run_id>_<path> (e.g. "728368_run_results.json").
   :param hook_params: Extra arguments passed to the DbtCloudHook constructor.


   .. py:attribute:: template_fields
      :value: ('dbt_cloud_conn_id', 'run_id', 'path', 'account_id', 'output_file_name')



   .. py:attribute:: dbt_cloud_conn_id
      :value: 'dbt_cloud_default'



   .. py:attribute:: run_id


   .. py:attribute:: path


   .. py:attribute:: account_id
      :value: None



   .. py:attribute:: step
      :value: None



   .. py:attribute:: output_file_name


   .. py:attribute:: hook_params


   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: DbtCloudListJobsOperator(*, dbt_cloud_conn_id = DbtCloudHook.default_conn_name, account_id = None, project_id = None, order_by = None, hook_params = None, **kwargs)

   Bases: :py:obj:`airflow.providers.common.compat.sdk.BaseOperator`


   List jobs in a dbt Cloud project.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:DbtCloudListJobsOperator`

   Retrieves metadata for all jobs tied to a specified dbt Cloud account. If a ``project_id`` is
   supplied, only jobs pertaining to this project id will be retrieved.

   :param account_id: Optional. If an account ID is not provided explicitly,
       the account ID from the dbt Cloud connection will be used.
   :param order_by: Optional. Field to order the result by. Use '-' to indicate reverse order.
       For example, to use reverse order by the run ID use ``order_by=-id``.
   :param project_id: Optional. The ID of a dbt Cloud project.
   :param hook_params: Extra arguments passed to the DbtCloudHook constructor.


   .. py:attribute:: template_fields
      :value: ('account_id', 'project_id')



   .. py:attribute:: dbt_cloud_conn_id
      :value: 'dbt_cloud_default'



   .. py:attribute:: account_id
      :value: None



   .. py:attribute:: project_id
      :value: None



   .. py:attribute:: order_by
      :value: None



   .. py:attribute:: hook_params


   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



